style.css
body{
    width : 98vw;
    height: 98vh;
    border: 1px solid black;
    display: flex;
    justify-content: center;
}

.container{
    width : 850px;
    height: 800px;
    border: 1px solid royalblue;
    display : flex;
    justify-content: space-between;
}

.images-list-container{
    width : 300px;
    height: 100%;
    border: 1px solid red;
}

.image-info{
    width : 100%;
    height: 10%;
    border: 1px solid green;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.image-info-selected{
    background-color: hwb(240 28% 6%);
    color: white;
}

.left-image{
    width: 25%;
    height: 80%;
    border: 1px solid gold;
    border-radius : 1em;
}

.left-image-title{
    border: 1px solid brown;
    margin-block-start: 0px;
    margin-block-end: 0px;
    padding-left: 5px;
    margin-left: 5px;
    margin-right: 5px;
    width: 200px;
    height: 30%;
    display: inline-block;
    font-size: 100%;
    overflow: hidden;
    white-space: nowrap; 
    text-overflow : ellipsis;
}

.image-container{
    width : 520px;
    height: 100%;
    border: 1px solid green;
}

.image-container-image{
    width : 100%;
    height: 94%;
    border: 1px solid plum;
}

.right-image{
    width: 100%;
    height: 100%;
    border: 1px solid purple;
}

input{
    width: 98%;
    height: 5%;
    text-align: center;
    border : none;
}

